# Portfolio_Automatic_CPP

./: .gitignore  CMakeLists.txt  Feedack.md  README.md  leeruitkomst.md  portfolio.md
src/: File.hh  Input.cpp  Input.hh  Path.cpp  Path.hh  Portfolio.cpp  Portfolio.hh  Table.cpp  Table.hh  main.cpp
storage/: Gemaakt.txt  storage.txt
